--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
@@ -28,5 +32,18 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Carlos-Hinojosa17/Sistema-JC.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Carlos-Hinojosa17/Sistema-JC/issues"
+  },
+  "homepage": "https://github.com/Carlos-Hinojosa17/Sistema-JC#readme"
 }
